quitar barra al principio rutas src img

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a href="#inicio" class="flex items-center space-x-3 text-left group">
                 <div class="brand-logo-container">
                     <!-- Asegúrate de que esta imagen sea PNG transparente o SVG -->
-                    <img src="/img/logo.svg" alt="Logotipo Lic. Victoria Puig"
+                    <img src="img/logo.svg" alt="Logotipo Lic. Victoria Puig"
                         class="brand-logo transition-transform group-hover:scale-105">
                 </div>
                 <div class="flex flex-col">
@@ -222,7 +222,7 @@
                 <div class="order-1 lg:order-2 relative">
                     <div
                         class="aspect-[4/5] bg-stone-200 rounded-[2.5rem] md:rounded-[3.5rem] overflow-hidden shadow-2xl relative z-10 mx-auto max-w-sm md:max-w-md border-[8px] md:border-[12px] border-white">
-                        <img src="/img/foto_victoria_puig.webp" alt="Lic. Victoria Puig - Psicóloga en Montevideo"
+                        <img src="img/foto_victoria_puig.webp" alt="Lic. Victoria Puig - Psicóloga en Montevideo"
                             class="w-full h-full object-cover" loading="eager">
                     </div>
                     <!-- Elementos decorativos responsivos -->
@@ -577,7 +577,7 @@
             class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center space-y-12 md:space-y-0 text-center md:text-left">
             <div class="space-y-6">
                 <div class="flex items-center space-x-3 justify-center md:justify-start">
-                    <img src="/img/logo.svg" alt="Icono Marca"
+                    <img src="img/logo.svg" alt="Icono Marca"
                         class="h-10 w-auto filter brightness-0 invert opacity-70">
                     <div class="text-2xl font-semibold text-white leading-none">Lic. Victoria Puig</div>
                 </div>
