--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="https://www.victoriapuig.com.uy">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 
     <!-- Fuentes y Frameworks -->
     <script src="https://cdn.tailwindcss.com"></script>
