--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&family=Playfair+Display:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
 
-    <!-- Schema.org para Google (SEO Local) -->
-    <script type="application/ld+json">
+   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Psychologist",
@@ -32,10 +31,19 @@
       "description": "Psicóloga Cognitivo-Conductual y Magíster en Psicología de la Salud y del Deporte en Montevideo.",
       "address": {
         "@type": "PostalAddress",
+        "streetAddress": "Lorenzo Justiniano Pérez 3233",
         "addressLocality": "Montevideo",
+        "addressRegion": "Montevideo",
+        "postalCode": "11300",
         "addressCountry": "UY"
       },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-34.906237",
+        "longitude": "-56.145890"
+      },
       "url": "https://www.victoriapuig.com.uy",
+      "telephone": "+59899945459",
       "priceRange": "$$",
       "knowsAbout": ["Ansiedad", "Depresión", "TCC", "Psicología del Deporte"]
     }
@@ -140,12 +148,9 @@
                     class="nav-link text-xs uppercase tracking-widest font-medium text-stone-600 hover:text-stone-900">Servicios</a>
                 <a href="#opiniones"
                     class="nav-link text-xs uppercase tracking-widest font-medium text-stone-600 hover:text-stone-900">Opiniones</a>
-                <a href="#contacto"
-                    class="bg-[#E88D7D] text-white px-6 py-2.5 rounded-full text-xs uppercase tracking-widest font-bold hover:bg-[#D67A6B] transition-all btn-shadow flex items-center space-x-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"
-                        fill="currentColor">
-                        <path
-                            d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.588-5.946 0-6.556 5.332-11.891 11.893-11.891 3.181 0 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.481 8.403 0 6.556-5.332 11.893-11.893 11.893-2.007 0-3.967-.505-5.717-1.46l-6.276 1.676zm6.302-4.212l.363.216c1.336.796 2.871 1.216 4.442 1.216 4.703 0 8.532-3.829 8.532-8.532 0-2.274-.885-4.413-2.493-6.022-1.607-1.607-3.747-2.492-6.039-2.492-4.704 0-8.532 3.828-8.532 8.532 0 1.67.481 3.303 1.391 4.73l.237.373-1.001 3.655 3.748-.976zm10.706-5.074c-.244-.122-1.444-.712-1.668-.794-.223-.082-.387-.122-.549.123-.162.244-.629.794-.771.957-.142.163-.284.183-.528.061-.243-.122-1.028-.38-1.958-1.209-.724-.647-1.213-1.447-1.355-1.691-.142-.244-.015-.376.107-.497.111-.109.244-.285.365-.427.122-.142.162-.244.244-.406.081-.163.041-.305-.021-.427-.06-.122-.549-1.321-.751-1.811-.197-.473-.396-.409-.549-.417-.142-.008-.305-.008-.468-.008-.162 0-.427.061-.65.284-.224.224-.854.834-.854 2.035 0 1.201.874 2.36 1.012 2.541.139.181 1.72 2.626 4.167 3.682.582.251 1.036.401 1.391.513.584.186 1.116.16 1.536.097.469-.071 1.444-.59 1.648-1.159.203-.569.203-1.057.142-1.159-.061-.102-.224-.162-.468-.284z" />
+                <a href="https://wa.me/59899945459" target="_blank" class="bg-[#E88D7D] text-white px-6 py-2.5 rounded-full text-xs uppercase tracking-widest font-bold hover:bg-[#D67A6B] transition-all btn-shadow flex items-center space-x-2">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M.057 24l1.687-6.163c-1.041-1.804-1.588-3.849-1.588-5.946 0-6.556 5.332-11.891 11.893-11.891 3.181 0 6.167 1.24 8.413 3.488 2.245 2.248 3.481 5.236 3.481 8.403 0 6.556-5.332 11.893-11.893 11.893-2.007 0-3.967-.505-5.717-1.46l-6.276 1.676zm6.302-4.212l.363.216c1.336.796 2.871 1.216 4.442 1.216 4.703 0 8.532-3.829 8.532-8.532 0-2.274-.885-4.413-2.493-6.022-1.607-1.607-3.747-2.492-6.039-2.492-4.704 0-8.532 3.828-8.532 8.532 0 1.67.481 3.303 1.391 4.73l.237.373-1.001 3.655 3.748-.976zm10.706-5.074c-.244-.122-1.444-.712-1.668-.794-.223-.082-.387-.122-.549.123-.162.244-.629.794-.771.957-.142.163-.284.183-.528.061-.243-.122-1.028-.38-1.958-1.209-.724-.647-1.213-1.447-1.355-1.691-.142-.244-.015-.376.107-.497.111-.109.244-.285.365-.427.122-.142.162-.244.244-.406.081-.163.041-.305-.021-.427-.06-.122-.549-1.321-.751-1.811-.197-.473-.396-.409-.549-.417-.142-.008-.305-.008-.468-.008-.162 0-.427.061-.65.284-.224.224-.854.834-.854 2.035 0 1.201.874 2.36 1.012 2.541.139.181 1.72 2.626 4.167 3.682.582.251 1.036.401 1.391.513.584.186 1.116.16 1.536.097.469-.071 1.444-.59 1.648-1.159.203-.569.203-1.057.142-1.159-.061-.102-.224-.162-.468-.284z"/>
                     </svg>
                     <span>Contactame</span>
                 </a>
@@ -167,8 +172,7 @@
             <a href="#mi-propuesta" onclick="toggleMenu()" class="text-xl font-medium">Mi Propuesta</a>
             <a href="#servicios" onclick="toggleMenu()" class="text-xl font-medium">Servicios</a>
             <a href="#opiniones" onclick="toggleMenu()" class="text-xl font-medium">Opiniones</a>
-            <a href="#contacto" onclick="toggleMenu()"
-                class="bg-[#E88D7D] text-white px-6 py-4 rounded-xl font-semibold flex items-center justify-center space-x-2">
+           <a href="https://wa.me/59899945459" target="_blank" onclick="toggleMenu()" class="bg-[#E88D7D] text-white px-6 py-3 rounded-xl font-medium flex items-center justify-center space-x-2">
                 <span>Contactame</span>
             </a>
         </div>
@@ -535,35 +539,31 @@
                         <div class="flex flex-col sm:flex-row gap-8 sm:gap-12 px-2">
                             <div class="space-y-2">
                                 <p class="text-[10px] uppercase tracking-widest text-stone-400 font-bold">WhatsApp</p>
-                                <a href="https://wa.me/598000000"
+                                <a href="https://wa.me/59899945459" target="_blank"
                                     class="text-lg text-stone-800 hover:text-[#E88D7D] transition-colors font-medium flex items-center">
-                                    <span class="mr-2">🇺🇾</span> +598 000 000
+                                    <span class="mr-2">🇺🇾</span> +598 99 945 459
                                 </a>
                             </div>
                             <div class="space-y-2">
                                 <p class="text-[10px] uppercase tracking-widest text-stone-400 font-bold">Email</p>
-                                <a href="mailto:hola@victoriapuig.com"
-                                    class="text-lg text-stone-800 hover:text-[#E88D7D] transition-colors font-medium">hola@victoriapuig.com</a>
+                                <a href="mailto:victoriapuiggomez@gmail.com"
+                                    class="text-lg text-stone-800 hover:text-[#E88D7D] transition-colors font-medium">victoriapuiggomez@gmail.com</a>
                             </div>
                         </div>
                     </div>
 
-                    <div class="space-y-8 lg:sticky lg:top-32">
-                        <div
-                            class="bg-white p-2 rounded-[2.5rem] md:rounded-[3.5rem] shadow-2xl overflow-hidden map-container h-[400px] md:h-[450px] relative border-[8px] border-stone-50">
-                            <iframe title="Ubicación Lic. Victoria Puig en Montevideo"
-                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13091.248386401053!2d-56.1558223!3d-34.9112239!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f810d5012373f%3A0x272d0001a1f81d5d!2sPocitos%2C%20Montevideo!5e0!3m2!1ses!2suy!4v1715000000000"
-                                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                                referrerpolicy="no-referrer-when-downgrade">
+                   <div class="space-y-8 lg:sticky lg:top-32 text-left">
+                        <div class="bg-white p-2 rounded-[2.5rem] md:rounded-[3.5rem] shadow-2xl overflow-hidden map-container h-[400px] md:h-[450px] relative border-[8px] border-stone-50">
+                            <iframe 
+                                title="Ubicación Lic. Victoria Puig en Montevideo"
+                                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3272.5083161044464!2d-56.14588972343899!3d-34.90623697386762!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x959f811340b33411%3A0xe5a363717dfb1191!2sLorenzo%20Justiniano%20P%C3%A9rez%203233%2C%2011300%20Montevideo%2C%20Departamento%20de%20Montevideo%2C%20Uruguay!5e0!3m2!1ses!2suy!4v1709664532000!5m2!1ses!2suy" 
+                                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
                             </iframe>
                         </div>
-                        <div class="px-6 space-y-2">
-                            <h4 class="text-xl font-bold text-stone-900">Consulta Presencial en Montevideo</h4>
-                            <p class="text-stone-500 text-sm leading-relaxed">Zona Pocitos / Centro (ubicación exacta a
-                                coordinar para tu privacidad).<br>Montevideo, Uruguay.</p>
-                            <a href="#" target="_blank"
-                                class="inline-block mt-2 text-[#E88D7D] text-xs font-bold uppercase tracking-widest border-b-2 border-[#E88D7D] pb-1 hover:text-stone-900 hover:border-stone-900 transition-all">Ver
-                                en Google Maps</a>
+                        <div class="px-6 space-y-2 text-left">
+                            <h4 class="text-xl font-bold text-stone-900 text-left">Consulta Presencial en Montevideo</h4>
+                            <p class="text-stone-500 text-sm leading-relaxed text-left">Lorenzo Justiniano Pérez 3233, Pocitos, Montevideo.<br>Uruguay.</p>
+                            <a href="https://maps.app.goo.gl/fhdGuMZu7BaUwXXe9" target="_blank" class="inline-block mt-3 text-salmon text-xs font-bold uppercase tracking-widest border-b-2 border-salmon pb-1 text-left">Ver en Google Maps</a>
                         </div>
                     </div>
                 </div>
@@ -591,7 +591,7 @@
                 <div class="space-y-4">
                     <h4 class="text-white font-bold uppercase tracking-[0.2em] text-[10px]">Ubicación</h4>
                     <p class="text-stone-400">Montevideo, Uruguay</p>
-                    <p class="text-stone-400">Sesiones Online</p>
+                    <p class="text-stone-400">Sesiones Online y Presenciales</p>
                 </div>
                 <div class="space-y-4">
                     <h4 class="text-white font-bold uppercase tracking-[0.2em] text-[10px]">Legal</h4>
@@ -603,13 +603,13 @@
 
         <div
             class="max-w-7xl mx-auto mt-16 pt-8 border-t border-stone-800 flex flex-col md:flex-row justify-between items-center text-[10px] uppercase tracking-[0.3em] opacity-40 text-center space-y-4 md:space-y-0">
-            <p>&copy; 2025 Lic. Victoria Puig. Montevideo, Uruguay.</p>
+            <p>&copy; 2026 Lic. Victoria Puig. Montevideo, Uruguay.</p>
             <p>Hecho con cuidado profesional</p>
         </div>
     </footer>
 
     <!-- WhatsApp Floating Button (Mobile Friendly) -->
-    <a href="https://wa.me/598000000"
+    <a href="https://wa.me/59899945459" target="_blank"
         class="fixed bottom-6 right-6 bg-[#25D366] text-white p-4 rounded-full shadow-2xl z-40 hover:scale-110 active:scale-95 transition-transform md:bottom-8 md:right-8"
         aria-label="Contactar por WhatsApp">
         <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
