--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="canonical" href="https://www.victoriapuig.com">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32">
 
     <!-- Fuentes y Frameworks -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -127,7 +127,6 @@
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
             <a href="#inicio" class="flex items-center space-x-3 text-left group">
                 <div class="brand-logo-container">
-                    <!-- Asegúrate de que esta imagen sea PNG transparente o SVG -->
                     <img src="img/logo.svg" alt="Logotipo Lic. Victoria Puig"
                         class="brand-logo transition-transform group-hover:scale-105">
                 </div>
@@ -262,19 +261,19 @@
                     </p>
                 </div>
 
-                <!-- Detalles de Modalidad (Anteriormente en Servicios) -->
+                <!-- Detalles de Modalidad -->
                 <div class="flex flex-wrap justify-center gap-6 md:gap-12 mb-20 text-stone-500 font-medium py-6 border-y border-stone-200/60">
                     <div class="flex items-center space-x-2">
                         <svg class="w-5 h-5 text-salmon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"/></svg>
-                        <span class="text-sm md:text-base">Atención individual</span>
+                        <span class="text-sm md:text-base"><strong>Atención individual</strong></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <svg class="w-5 h-5 text-salmon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064"/></svg>
-                        <span class="text-sm md:text-base">Presencial & Online</span>
+                        <span class="text-sm md:text-base"><strong>Presencial & Online</strong></span>
                     </div>
                     <div class="flex items-center space-x-2">
                         <svg class="w-5 h-5 text-salmon" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
-                        <span class="text-sm md:text-base">Sesiones de 50 minutos</span>
+                        <span class="text-sm md:text-base"><strong>Sesiones de 50 minutos</strong></span>
                     </div>
                 </div>
 
@@ -288,7 +287,7 @@
                     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6 md:gap-8 max-w-5xl mx-auto">
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Ansiedad, estrés y sensación de alerta</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Ansiedad</strong>, estrés y sensación de alerta</span>
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
@@ -296,11 +295,11 @@
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Exigencia excesiva y autoexigencia</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Exigencia excesiva</strong> y autoexigencia</span>
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Baja autoestima y autocrítica constante</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Baja autoestima</strong> y autocrítica constante</span>
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
@@ -308,11 +307,11 @@
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Agotamiento</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Agotamiento</strong></span>
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Dificultad en decisiones y sostener cambios</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Dificultad en decisiones</strong> y sostener cambios</span>
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
@@ -324,7 +323,11 @@
                         </div>
                         <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px] sm:col-span-2 lg:col-span-1">
                             <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
-                            <span class="text-stone-700 text-sm md:text-base">Cambio personal y estilo de vida</span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Cambio personal</strong> y estilo de vida</span>
+                        </div>
+                        <div class="flex items-center space-x-4 p-4 rounded-2xl bg-white/60 border border-stone-100 shadow-sm transition-transform hover:translate-y-[-2px]">
+                            <span class="w-2 h-2 bg-salmon rounded-full shrink-0"></span>
+                            <span class="text-stone-700 text-sm md:text-base"><strong>Adicciones</strong></span>
                         </div>
                     </div>
                 </div>
@@ -692,7 +695,7 @@
                 btn.classList.remove('opacity-50', 'cursor-not-allowed');
                 status.classList.remove('hidden', 'text-green-700', 'bg-green-50', 'border-green-100');
                 status.classList.add('text-red-700', 'bg-red-50', 'border', 'border-red-100');
-                status.innerHTML = "Hubo un problema. Por favor, intenta de nuevo.";
+                status.innerHTML = "Hubo un problema. Por favor, intenta de nuevo o contáctame por whatsapp.";
             }
         });
 
