--- a/index.html
+++ b/index.html
@@ -631,7 +631,7 @@
                 <div class="grid lg:grid-cols-2 gap-16 lg:gap-24 items-start">
                     <div class="space-y-12">
                         <div class="text-left">
-                            <h2 class="text-4xl md:text-5xl mb-8 text-stone-900 font-bold text-left">Agenda tu consulta
+                            <h2 class="text-4xl md:text-5xl mb-8 text-stone-900 font-bold text-left">Agendá tu consulta
                             </h2>
                             <div class="border-l-4 border-[#E88D7D]/30 pl-6 md:pl-8 italic text-left">
                                 <p class="text-lg md:text-xl text-stone-500 font-light leading-relaxed">
