--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <link rel="canonical" href="https://www.victoriapuig.com">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="favicon.ico" sizes="32x32">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="manifest" href="site.webmanifest">
 
     <!-- Fuentes y Frameworks -->
     <script src="https://cdn.tailwindcss.com"></script>
