--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             scroll-behavior: smooth;
             color: var(--text-main);
             background-color: #fdfcfb;
+            line-height: 1.5;
         }
 
         h1,
@@ -72,6 +73,7 @@
         h3,
         h4 {
             font-family: 'Playfair Display', serif;
+            line-height: 1.15;
         }
 
         .nav-link {
@@ -94,15 +96,14 @@
             width: 100%;
         }
 
-        .brand-logo-container {
+        /* .brand-logo-container {
             height: 48px;
-            /* Altura controlada para evitar que el logo se vea tosco */
             display: flex;
             align-items: center;
-        }
+        } */
 
         .brand-logo {
-            max-height: 100%;
+            max-height: 38px;
             width: auto;
             object-fit: contain;
             /* Eliminamos filtros que puedan nublar la imagen */
@@ -141,6 +142,12 @@
         .rotate-icon.open svg {
             transform: rotate(45deg);
             /* convierte + en × */
+        }
+
+        @media (max-width: 768px) {
+            h1 { line-height: 1.1 !important; }
+            section { padding-top: 3rem !important; padding-bottom: 3rem !important; }
+            .hero-section { padding-top: 7rem !important; padding-bottom: 3rem !important; }
         }
     </style>
 </head>
@@ -207,7 +214,7 @@
     <main>
         <!-- Hero Section / Inicio -->
         <section id="inicio"
-            class="relative pt-40 pb-20 lg:pt-52 lg:pb-32 px-4 sm:px-6 min-h-screen flex items-center bg-[#f7f5f2]">
+            class="hero-section relative pt-28 pb-12 lg:pt-36 lg:pb-20 px-4 sm:px-6 min-h-[90vh] flex items-center bg-[#fdfcfb]">
             <div class="max-w-7xl mx-auto grid lg:grid-cols-2 gap-12 lg:gap-16 items-center">
                 <div class="order-2 lg:order-1 text-center lg:text-left space-y-8 animate-fade-in">
                     <div class="space-y-4">
@@ -280,9 +287,9 @@
         </section>
 
         <!-- Mi Propuesta -->
-        <section id="mi-propuesta" class="py-24 md:py-32 px-4 sm:px-6 bg-[#FFF5F2] scroll-mt-24">
+        <section id="mi-propuesta" class="py-12 md:py-20 px-4 sm:px-6 bg-[#FFF5F2] scroll-mt-20">
             <div class="max-w-6xl mx-auto">
-                <div class="text-center mb-20">
+                <div class="text-center mb-10">
                     <h2 class="text-4xl md:text-5xl text-stone-900 mb-6 font-bold">¿Cómo trabajaremos?</h2>
                     <p class="text-lg md:text-xl text-stone-600 font-light leading-relaxed max-w-4xl mx-auto">
                         Cada proceso es único. El trabajo se diseña de forma personalizada, con objetivos definidos en
@@ -294,7 +301,7 @@
 
                 <!-- Detalles de Modalidad -->
                 <div
-                    class="flex flex-wrap justify-center gap-6 md:gap-12 mb-20 text-stone-500 font-medium py-6 border-y border-stone-200/60">
+                    class="flex flex-wrap justify-center gap-6 md:gap-12 mb-10 text-stone-500 font-medium py-6 border-y border-stone-200/60">
                     <div class="flex items-center space-x-2">
                         <svg class="w-5 h-5 text-salmon" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -319,15 +326,15 @@
                 </div>
 
                 <!-- Acordeón de Servicios/Acompañamiento -->
-                <div class="mb-24">
-                    <div class="text-center mb-16">
+                <div class="mb-10">
+                    <div class="text-center mb-8">
                         <h3 class="text-3xl md:text-4xl font-semibold text-stone-900 mb-2">¿En qué puedo acompañarte?
                         </h3>
                         <p class="text-[#E88D7D] font-medium italic">Desde un enfoque psicológico basado en evidencia.
                         </p>
                     </div>
 
-                    <div class="grid lg:grid-cols-3 gap-8">
+                    <div class="grid lg:grid-cols-3 gap-4">
                         <!-- Columna 1 -->
                         <div
                             class="bg-white p-8 rounded-[2.5rem] shadow-sm border border-[#F5E6E1] flex flex-col items-center text-center">
@@ -632,7 +639,7 @@
         <!-- Agenda y Contacto -->
         <section id="contacto" class="py-24 md:py-32 px-4 sm:px-6 bg-white border-t border-stone-200 scroll-mt-20">
             <div class="max-w-7xl mx-auto">
-                <div class="grid lg:grid-cols-2 gap-16 lg:gap-24 items-start">
+                <div class="grid lg:grid-cols-2 gap-10 lg:gap-24 items-start">
                     <div class="space-y-12">
                         <div class="text-left">
                             <h2 class="text-4xl md:text-5xl mb-8 text-stone-900 font-bold text-left">Agendá tu consulta
